--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,49 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    /*background-color: rgb(52, 0, 74);*/
+    background-image: url("https://img.wattpad.com/635fe265e22552d44d70199a6b677525875ee06d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f776174747061642d6d656469612d736572766963652f53746f7279496d6167652f4177744a66494170746365446b773d3d2d3433343632313131332e3134636438376632656330323939303239333934303233333835302e676966");
+  }
+  
+  ul{
+    color: #369;
+    font-family: 'Courier New', Courier, monospace;
+  }
+  button{
+    background-color: aquamarine;
+  }
+  h2, h3 {
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+  }
+  body {
+    margin: 2em;
+  }
+  body, input[type="text"], button {
+    color: #333;
+    font-family: Cambria, Georgia, serif;
+  }
+  button {
+    background-color: #eee;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    color: black;
+    font-size: 1.2rem;
+    padding: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  }
+  button:hover {
+    background-color: black;
+    color: white;
+  }
+  button:disabled {
+    background-color: #eee;
+    color: #aaa;
+    cursor: auto;
+  }
+  * {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
